Fix line spacing in headers

--- a/css/main.scss
+++ b/css/main.scss
@@ -65,6 +65,7 @@ section {
       margin: 0.8em 0;
       font-weight: normal;
       letter-spacing: -1px;
+      line-height: 1.2em;
     }
     h2 {
       font-size: 1.6em;
